using System.Collections;
using System.Collections.Generic;
using UnityEngine;

internal class AnimStrings
{
    internal static string yVelocity = "yVelocity";
    internal static string xVelocity = "xVelocity";
    internal static string isMoving = "isMoving";
    internal static string isAttacking = "isAttacking";
    internal static string canMove = "canMove";
    internal static string fadeOut = "fadeOut";
    internal static string fadeIn ="fadeIn";
    internal static string isHit = "isHit";
    internal static string isDashing = "isDashing";
    internal static string roomCleared="roomCleared";
}
